# zvar-tools

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  credentials.default.json  pyproject.toml  requirements.txt
.github/workflows/: wheels.yaml
PeriodicityCandidates/: FindCandidates.py  ZVAR_Analysis.ipynb
data/variability_candidates/0279/: fpw_0279_zg.parquet  fpw_0279_zr.parquet
data/variability_candidates/0648/: fpw_0648_zg.csv  fpw_0648_zg.parquet  fpw_0648_zr.csv  fpw_0648_zr.parquet
notebooks/: candidates_analysis.ipynb  datasource.ipynb  example.ipynb  local_datasource.ipynb  minify_lightcurves.ipynb  zvar_analysis.ipynb
scripts/: check_complete.py  merge_matchfiles.py  radec2field.py  retrieve_variability_candidates.py
src/zvartools/: candidate.py  data.py  enums.py  external.py  files.py  lightcurves.py  parsers.py  periodicity.py  plot.py  spatial.py  stats.py
src/zvartools/data/: ZTF_Fields.txt
tests/: test_great_circle_distance.py  test_merge_matchfiles.py  test_xmatch.py
zvar_utils/: candidate.py  enums.py  files.py  kowalski.py  lightcurves.py  main.py  parsers.py  periodicity.py  photometry.py  plot.py  spatial.py  stats.py
